@@ -24,17 +24,18 @@ import java.util.ArrayList;
 import java.util.ResourceBundle;
 
 public class AccueilControleur extends SujetObserve implements Initializable, Observateur {
+
     private ArrayList<PaquetDeCartes> paquets;
-
     private GlobalControleur globalControleur;
-
     private PaquetDeCartes paquetActuel;
+
     @FXML
     private GridPane table;
     @FXML
     private ToggleButton toggleBouton;
     @FXML
     private Button importPaquet;
+
 
     public AccueilControleur(ArrayList<PaquetDeCartes> paquets, GlobalControleur globalControleur){
         this.paquets = paquets;
@@ -45,10 +46,7 @@ public class AccueilControleur extends SujetObserve implements Initializable, Ob
     }
 
     @Override
-    public void reagir() {
-
-    }
-
+    public void reagir() {}
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
         creationBoutons();
@@ -146,17 +144,8 @@ public class AccueilControleur extends SujetObserve implements Initializable, Ob
     public PaquetDeCartes getPaquetActuel() {
         return paquetActuel;
     }
-    public void majPaquetGlobalControleur(PaquetDeCartes paquetActuel) throws Exception {
-        globalControleur.sauvegarder();
-        this.globalControleur.setPaquet(paquetActuel);
-    }
-    public void majCarteGlobalControleur(Carte carteActuelle) throws Exception {
-        globalControleur.sauvegarder();
-        this.globalControleur.setCarte(carteActuelle);
-    }
 
-
-    // FXML bouton fonctions
+    // FXML boutons fonctions
     @FXML
     public void ajouterNouveauPaquet() throws Exception {
         (new AjouterPaquetCommande(globalControleur)).execute();
@@ -180,9 +169,31 @@ public class AccueilControleur extends SujetObserve implements Initializable, Ob
     }
     @FXML
     public void Partager(){
+        String url = "https://drive.google.com/drive/folders/1lVTIiVpMvUISgtlbWErNU_TKBQSxMgqF?usp=sharing";
+        String os = System.getProperty("os.name").toLowerCase();
+
         try {
-            new ProcessBuilder("x-www-browser", "https://drive.google.com/drive/folders/1lVTIiVpMvUISgtlbWErNU_TKBQSxMgqF?usp=sharing").start();
-        } catch (IOException e) {
+            if (os.contains("win")) {
+                Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+            } else if (os.contains("mac")) {
+                Runtime.getRuntime().exec("open " + url);
+            } else {
+                // Assuming a Unix-like system
+                String[] browsers = { "firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape" };
+
+                String browser = null;
+                for (int count = 0; count < browsers.length && browser == null; count++) {
+                    if (Runtime.getRuntime().exec(new String[] {"which", browsers[count]}).waitFor() == 0) {
+                        browser = browsers[count];
+                    }
+                }
+                if (browser == null) {
+                    throw new Exception("Could not find web browser");
+                } else {
+                    Runtime.getRuntime().exec(new String[] {browser, url});
+                }
+            }
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
@@ -190,7 +201,6 @@ public class AccueilControleur extends SujetObserve implements Initializable, Ob
     public void importerPaquet() throws Exception {
         (new ImporterCommande(globalControleur, paquets)).execute();
     }
-
     // TODO : try to strategy pattern this
     @FXML
     public void random(){
@@ -261,5 +271,4 @@ public class AccueilControleur extends SujetObserve implements Initializable, Ob
             paquet.setApprentissageStrategie(new MasterStrategie());
         }
     }
-
 }
